@@ -3,12 +3,11 @@ version = 1.211
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
-copyright_year = 2010
+copyright_year = 2011
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.207
+Config::Model    = 1.234
 Log::Log4perl    = 1.11 
-Parse::RecDescent = 0
 
 [Prereqs / RuntimeRecommends]
 Config::Model::CursesUI = 0 ; Curses interface
